fetch single question data

--- a/src/app/components/admin/assessment-details/assessment-details.component.html
+++ b/src/app/components/admin/assessment-details/assessment-details.component.html
@@ -154,6 +154,7 @@
           </div>
           <div class="col-span-3 ps-1 text-base flex gap-2">
             <button
+              (click)="openDialog(q.questionIdentifier)"
               class="bg-teal-500 px-4 py-1 rounded-full font-semibold text-sm text-white"
             >
               View
