--- a/src/app/components/admin/assessment-details/assessment-details.component.html
+++ b/src/app/components/admin/assessment-details/assessment-details.component.html
@@ -165,6 +165,7 @@
               Update
             </button>
             <button
+              (click)="onDeleteQuestion(q.questionIdentifier)"
               class="bg-red-500 px-4 py-1 rounded-full font-semibold text-sm text-white"
             >
               Delete
