--- a/src/app/components/admin/sidebar/sidebar.component.html
+++ b/src/app/components/admin/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
   <!-- link  -->
   <div class="ps-2 flex flex-col gap-2 transition-all">
     <a
-      routerLink="/admin"
+      routerLink="/admin/home"
       routerLinkActive="active_sidebar"
       class="flex items-center gap-3 px-4 py-2 hover:bg-white rounded-l-full hover:text-teal-600"
     >
@@ -44,21 +44,21 @@
       Assessment
     </a>
     <a
-      routerLink=""
+      routerLink="/admin/users"
       routerLinkActive="active_sidebar"
       class="flex items-center gap-3 px-4 py-2 hover:bg-white rounded-l-full hover:text-teal-600"
     >
       <ng-icon class="text-xl" name="heroUsers"></ng-icon> All Users
     </a>
     <a
-      routerLink=""
+      routerLink="/admin/leaderboard"
       routerLinkActive="active_sidebar"
       class="flex items-center gap-3 px-4 py-2 hover:bg-white rounded-l-full hover:text-teal-600"
     >
       <ng-icon class="text-xl" name="ionBarChartOutline"></ng-icon> Leaderboard
     </a>
     <a
-      routerLink=""
+      routerLink="/admin/system-health"
       routerLinkActive="active_sidebar"
       class="flex items-center gap-3 px-4 py-2 hover:bg-white rounded-l-full hover:text-teal-600"
     >
