--- a/src/app/components/admin/users/users.component.html
+++ b/src/app/components/admin/users/users.component.html
@@ -1,6 +1,4 @@
-<ng-container
-  *ngIf="assessments$ | async as listAssessment; else failureOrLoading"
->
+<ng-container *ngIf="users$ | async as listUsers; else failureOrLoading">
   <div class="my-5 px-3">
     <!-- header  -->
     <div
@@ -8,19 +6,17 @@
       class="flex justify-between items-center bg-header p-2 rounded-md"
     >
       <div>
-        <form [formGroup]="searchFormGroup" (ngSubmit)="getAssessments()">
-          <div
-            class="border border-teal-700 rounded-full w-96 h-8 flex items-center"
-          >
+        <form [formGroup]="searchFormGroup" (ngSubmit)="getUsers()">
+          <div class="rounded-full w-96 h-8 flex items-center">
             <input
-              class="outline-none px-2 py-1 rounded-s-full w-full h-fit bg-inherit text-white"
+              class="outline-none px-2 py-1 rounded-s-full w-full h-fit bg-white text-gray-500"
               type="text"
               placeholder="Search ..."
               formControlName="keyword"
             />
             <button
               type="submit"
-              class="px-3 py-2 border-s h-8 flex justify-center items-center border-teal-700 rounded-r-full text-white font-semibold"
+              class="px-3 py-2 bg-teal-600 h-8 flex justify-center items-center rounded-r-full text-white font-semibold"
             >
               Search
             </button>
@@ -42,57 +38,62 @@
     </div>
     <div class="grid grid-cols-12 gap-3 mt-5">
       <div
-        *ngFor="let a of listAssessment?.content"
-        class="col-span-4 border rounded-md p-3 bg-gray-50"
+        *ngFor="let u of listUsers?.content"
+        class="col-span-3 border rounded-md p-3 bg-gray-50"
       >
         <div class="flex justify-between items-center pb-2">
-          <div class="text-sm text-teal-600">#{{ a.assessmentIdentifier }}</div>
+          <div class="text-sm text-teal-600">#{{ u.userIdentifier }}</div>
           <div class="flex gap-2">
-            <a
-              [routerLink]="[
-                '/admin/assessments/update-assessment/' + a.assessmentIdentifier
-              ]"
-              class="bg-yellow-600 text-white py-1 px-3 rounded-full font-semibold text-xs"
-            >
-              Update
-            </a>
             <button
-              (click)="onDeleteAssessment(a.assessmentIdentifier)"
-              class="bg-red-600 text-white py-1 px-3 rounded-full font-semibold text-xs"
+              class="bg-teal-600 text-white py-1 px-3 rounded-full font-semibold text-xs"
             >
-              Delete
+              View
             </button>
           </div>
         </div>
         <hr />
-        <div class="mt-2">
-          <a
-            [routerLink]="'/admin/assessments/' + a.assessmentIdentifier"
-            class="text-lg font-semibold hover:text-teal-500"
-            >{{ a.title }}</a
+        <div class="mt-2 flex flex-col justify-center items-center w-full">
+          <div
+            class="h-32 w-32 border rounded-full p-2 relative"
+            [ngClass]="u.active ? 'border-green-600' : 'border-red-600'"
           >
-          <p class="text-gray-600 text-sm mt-1">{{ a.description }}</p>
-          <div class="flex flex-row gap-3 mt-5">
+            <img
+              src="{{ u.profileImageUrl }}"
+              class="w-full h-full object-cover"
+              alt=""
+            />
+            <h3
+              class="text-white py-1 px-3 rounded-full font-semibold text-xs absolute top-4 -right-10"
+              [ngClass]="u.active ? 'bg-green-600' : 'bg-red-600'"
+            >
+              {{ u.active ? "Active" : "Deactive" }}
+            </h3>
+          </div>
+          <h3 class="text-lg font-semibold hover:text-teal-500">
+            {{ u.firstName }} {{ u.lastName }}
+          </h3>
+
+          <div class="flex flex-col gap-3 mt-5">
             <div class="flex gap-2 items-center">
               <ng-icon
                 class="text-2xl font-extrabold"
-                name="ionTimerOutline"
+                name="ionAtSharp"
               ></ng-icon>
-              <div class="text-gray-500">{{ a.time }} minute</div>
+              <div class="text-gray-500">{{ u.username }}</div>
             </div>
             <div class="flex gap-2 items-center">
               <ng-icon
                 class="text-2xl font-extrabold"
-                name="ionBowlingBallOutline"
+                name="ionMailOpenOutline"
               ></ng-icon>
-              <div class="text-gray-500">{{ a.attempt }} times</div>
+              <div class="text-gray-500">{{ u.email }}</div>
             </div>
-            <div class="flex gap-2 items-center">
+            <div *ngIf="u.phone" class="flex gap-2 items-center">
               <ng-icon
                 class="text-2xl font-extrabold"
-                name="heroUserGroup"
+                name="ionPhonePortraitOutline"
               ></ng-icon>
-              <div class="text-gray-500">{{ a.totalTaken }} user</div>
+              <div class="text-gray-500">{{ u.phone }}</div>
             </div>
           </div>
         </div>
@@ -102,7 +103,7 @@
   <ul class="flex justify-center my-5">
     <li
       *ngFor="
-        let item of [].constructor(listAssessment.totalPages);
+        let item of [].constructor(listUsers.totalPages);
         let page = index
       "
     >
