--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,8 @@
         <a routerLink="" routerLinkActive="active">Assessment Taker</a>
       </div>
     </div>
-    <div>
+    <div class="flex items-center gap-3">
+      <a routerLink="/assessments">Assessments</a>
       <a
         class="px-4 py-1 rounded-full border hover:bg-teal-500"
         routerLink="/auth"
